BC - 8214 - fix jumping headings on room pages (#3418)
* Update expansion panel icons

* Update heading size and line-height in
settings.scss

* Refactor wireframe header styles

* Remove margin-bottom in DefaultWireframe.vue and
add line-height to .v-breadcrumbs

* Update DefaultWireframe.vue to hide border and use
a horizontal separator

* Fix room title alignment

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -13,8 +13,8 @@
       "line-height": var(--line-height-sm),
     ),
     "h3": (
-      "size": var(--heading-3),
-      "line-height": var(--line-height-sm),
+      "size": 33px,
+      "line-height": 40px,
     ),
     "h4": (
       "size": var(--heading-4),
@@ -56,6 +56,8 @@
   // $treeview-node-margin: 0,
   // $treeview-node-padding: 0,
 
+  // breadcrumbs
+  $breadcrumbs-item-padding: 0px,
   // v-label
   $label-opacity: var(--v-high-emphasis-opacity)
 );
